<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Front.Ranking">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/borda_text"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/borda_text"
                android:gravity="center"
                android:text=" Ranking "
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV_membros"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/borda_text"
                android:gravity="center"
                android:text="  Mem: XX  "
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV_jogos"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/borda_text"
                android:gravity="center"
                android:text="  Jgs: XX  "
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tV_pts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/material_motion_duration_long_1"
                android:background="@drawable/borda_text"
                android:gravity="center"
                android:text="  Pts: XX  "
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cB_3x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/_3x3"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cB_5x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/_5x5"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cB_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/total"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cB_jgs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/jgs"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cB_FG"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/fg"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cB_3Pts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/_3pts"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
    </LinearLayout>
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/nome"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="Jgs"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/v"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="FG%"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/clt"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/tp"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/_2pts"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/_3pts"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/reb"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/ast"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/blk"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/tpg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/_2pg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/_3pg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/rpg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/apg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/borda_text"
                    android:gravity="center"
                    android:text="@string/bpg"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ListView
                    android:id="@+id/lV_ranking"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>