<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.Holo.Dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/borda_text"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:text="@string/adicionar_jogador"
            android:textSize="38sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginBottom="30sp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tagPlay1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginHorizontal="25dp"
            android:background="@drawable/borda_text"
            android:ems="12"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:ignore="SpeakableTextPresentCheck" />


        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/verde_claro"
            android:text="@string/cadastrar"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>