<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Front.List_Jogos"
    android:background="@color/black">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/borda_text"
            android:text="@string/jogos"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:background="@drawable/borda_text"
        android:layout_marginBottom="5dp">
        <CheckBox
            android:id="@+id/cb_3x3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/_3x3"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
        <CheckBox
            android:id="@+id/cb_5x5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/borda_text"
            android:text="@string/_5x5"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="20sp"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="15dp"
            android:background="@drawable/borda_text"
            android:layout_marginBottom="15dp">

            <ListView
                android:id="@+id/lV_jogos"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="8dp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>